[metadata]
name = blpapipd
version = 0.1.0
author = T. Nicolas Steinbach
author_email = t@steinbachs.us
description = Extract Bloomberg (BBG) data into pandas timeseries object w/ caching.  Leverages blpapi desktop api in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tnicolas/blpapipd
project_urls =
    Bug Tracker = https://github.com/tnicolas/blpapipd/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
package_dir =
    = src

packages = find:
python_requires = >=3.6

[options.packages.find]
where = src, examples, tests